ParallaxBackground полностью переделан в метры с учётом ConvertUnits. Изменён пример с учётом этого.

--- a/Game/GameLogic/GameLogic.csproj
+++ b/Game/GameLogic/GameLogic.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="ConvertUnits.cs" />
     <Compile Include="GameLevel.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="IComponent.cs" />
