--- a/LevelEditor/LevelEditor/LevelEditorContentBuilder/LevelEditorContentBuilder.csproj
+++ b/LevelEditor/LevelEditor/LevelEditorContentBuilder/LevelEditorContentBuilder.csproj
@@ -1,20 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{0BB08547-8092-467D-B4E1-6F5E9F692AE0}</ProjectGuid>
+    <ProjectGuid>{5180E9F3-78F2-4464-BC37-B39FE6B9BC22}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ContentBuilder</RootNamespace>
-    <AssemblyName>ContentBuilder</AssemblyName>
+    <RootNamespace>LevelEditorContentBuilder</RootNamespace>
+    <AssemblyName>LevelEditorContentBuilder</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>fe9bfccc-462e-402d-b430-ccbedb01b904</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>2c9ed572-c1c6-4f08-9f91-052d6e76b30d</XnaCrossPlatformGroupID>
     <XnaOutputType>Library</XnaOutputType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -62,9 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Content\Content.contentproj">
-      <Project>{CDF0CC50-083D-4257-9294-0D9FAEB10BCA}</Project>
-      <Name>Content</Name>
+    <ProjectReference Include="..\LevelEditorContent\LevelEditorContent.contentproj">
+      <Project>{B4740FA6-E5EF-4694-BC7B-3460580F9F2B}</Project>
+      <Name>LevelEditorContent</Name>
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
