--- a/LevelEditor/LevelEditor/LevelEditor.csproj
+++ b/LevelEditor/LevelEditor/LevelEditor.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XnaScreenManager.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
