--- a/LevelEditor/LevelEditor/LevelEditor.csproj
+++ b/LevelEditor/LevelEditor/LevelEditor.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContentManagerService.cs" />
     <Compile Include="XnaScreen.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -65,7 +66,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XnaScreenManager.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
