--- a/Game/GameLogic/GameLogic.csproj
+++ b/Game/GameLogic/GameLogic.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ParallaxBackgroundDynamicItem.cs" />
     <Compile Include="ParallaxBackgroundItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sprite.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Farseer Physics Engine 3.3.1 Samples XNA\Farseer Physics Engine 3.3 XNA\Farseer Physics XNA.csproj">
