--- a/LevelEditor/LevelEditor/LevelEditor.csproj
+++ b/LevelEditor/LevelEditor/LevelEditor.csproj
@@ -110,7 +110,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="q3.jpg" />
+    <Content Include="q3.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
