Начал работу над превью окном.

--- a/FarseerTools/FarseerTools.csproj
+++ b/FarseerTools/FarseerTools.csproj
@@ -1,25 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>{8DAFD587-8A79-4D33-A35F-77D1ECD26D69}</ProjectGuid>
+    <ProjectGuid>{A875A73C-7870-4A79-81CD-BEA7DC8CCBD5}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LevelEditorContentBuilder</RootNamespace>
-    <AssemblyName>LevelEditorContentBuilder</AssemblyName>
+    <RootNamespace>FarseerTools</RootNamespace>
+    <AssemblyName>FarseerTools</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
-    <XnaCrossPlatformGroupID>e8977611-1741-4016-a123-fd513e24575e</XnaCrossPlatformGroupID>
+    <XnaCrossPlatformGroupID>8d6411ae-ed70-4c45-9c2e-3db1c3286cfc</XnaCrossPlatformGroupID>
     <XnaOutputType>Library</XnaOutputType>
-    <SccProjectName>Svn</SccProjectName>
-    <SccLocalPath>Svn</SccLocalPath>
-    <SccAuxPath>Svn</SccAuxPath>
-    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -64,15 +60,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LevelEditorContent\LevelEditorContent.contentproj">
-      <Project>{17D7FD3F-D9D5-4B50-A2AD-77FDAA569550}</Project>
-      <Name>LevelEditorContent %28Content%29</Name>
-      <XnaReferenceType>Content</XnaReferenceType>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <Private>True</Private>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
