--- a/Game/LevelEditor/LevelEditor.csproj
+++ b/Game/LevelEditor/LevelEditor.csproj
@@ -58,18 +58,16 @@
   <ItemGroup>
     <Compile Include="ContentBuilder.cs" />
     <Compile Include="ContentService.cs" />
-    <Compile Include="PreviewScreen.cs">
-      <SubType>Component</SubType>
-      <DependentUpon>GraphicsDeviceControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="ErrorLogger.cs" />
-    <Compile Include="XnaScreen.cs">
+    <Compile Include="TabHiddenHeadersControl.cs">
       <SubType>Component</SubType>
-      <DependentUpon>GraphicsDeviceControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="XnaControls\PreviewScreen.cs">
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="ServiceContainer.cs" />
     <Compile Include="GraphicsDeviceService.cs" />
-    <Compile Include="GraphicsDeviceControl.cs">
+    <Compile Include="XnaControls\GraphicsDeviceControl.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="MainForm.cs">
@@ -80,6 +78,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XnaControls\XnaScreen.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
