--- a/GameLogic/GameLogic.csproj
+++ b/GameLogic/GameLogic.csproj
@@ -60,7 +60,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
-    <Compile Include="ConvertUnits.cs" />
     <Compile Include="GameLevel.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="IComponent.cs" />
@@ -76,6 +75,10 @@
     <ProjectReference Include="..\Farseer Physics Engine 3.3 XNA\Farseer Physics XNA.csproj">
       <Project>{0A850700-1ABB-4288-A391-6726B90EBEB9}</Project>
       <Name>Farseer Physics XNA</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FarseerTools\FarseerTools.csproj">
+      <Project>{A875A73C-7870-4A79-81CD-BEA7DC8CCBD5}</Project>
+      <Name>FarseerTools</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
