--- a/Game/LevelEditor/LevelEditor.csproj
+++ b/Game/LevelEditor/LevelEditor.csproj
@@ -120,13 +120,23 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\acid.jpg" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\blank.png" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\dots.png" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\pavement.png" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\rust.jpg" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\squares.png" />
-    <Content Include="Content %28Runtime Build%29\Textures\Materials\waves.png" />
+    <Content Include="Content\Textures\Materials\acid.jpg" />
+    <Content Include="Content\Textures\Materials\blank.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\Materials\dots.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\Materials\pavement.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\Materials\rust.jpg" />
+    <Content Include="Content\Textures\Materials\squares.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\Textures\Materials\waves.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
