Поправил создание текстур(края). Переименовал ксна экран(в будущем возможны различия между левелскрином и обжектскрином)

--- a/Game/LevelEditor/LevelEditor.csproj
+++ b/Game/LevelEditor/LevelEditor.csproj
@@ -81,7 +81,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XnaControls\XnaScreen.cs">
+    <Compile Include="XnaControls\LevelScreen.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="MainForm.resx">
