--- a/Game/XMLImporterEx/XMLImporterEx.csproj
+++ b/Game/XMLImporterEx/XMLImporterEx.csproj
@@ -35,6 +35,7 @@
     <Reference Include="Microsoft.Xna.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <SpecificVersion>True</SpecificVersion>
     </Reference>
+    <Reference Include="Microsoft.Xna.Framework.Game, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86">
       <SpecificVersion>True</SpecificVersion>
     </Reference>
@@ -51,20 +52,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DefaultConverters.cs" />
-    <Compile Include="Deserializer.cs">
+    <Compile Include="Serialization\DefaultConverters.cs" />
+    <Compile Include="Serialization\Deserializer.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="FieldInfoTools.cs" />
-    <Compile Include="IXMLValueConverter.cs" />
-    <Compile Include="Serializer.cs" />
-    <Compile Include="TypeExtensions.cs" />
-    <Compile Include="XMLCustomConverterAttribute.cs" />
-    <Compile Include="XMLDoNotSerializeAttribute.cs" />
+    <Compile Include="Serialization\FieldInfoExtensions.cs" />
+    <Compile Include="Serialization\IXMLValueConverter.cs" />
+    <Compile Include="Serialization\Serializer.cs" />
+    <Compile Include="Serialization\TypeExtensions.cs" />
+    <Compile Include="XMLProcessorEx.cs" />
+    <Compile Include="Serialization\XMLCustomConverterAttribute.cs" />
+    <Compile Include="Serialization\XMLDoNotSerializeAttribute.cs" />
     <Compile Include="XMLImporterEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XMLSerializerEx.cs" />
+    <Compile Include="Serialization\XMLSerializerEx.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.ContentPipelineExtensions.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
