--- a/XMLImporterEx/XMLImporterEx.csproj
+++ b/XMLImporterEx/XMLImporterEx.csproj
@@ -52,22 +52,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Serialization\DefaultConverters.cs" />
-    <Compile Include="Serialization\Deserializer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Serialization\FieldInfoExtensions.cs" />
-    <Compile Include="Serialization\IXMLValueConverter.cs" />
-    <Compile Include="Serialization\Serializer.cs" />
-    <Compile Include="Serialization\TypeExtensions.cs" />
     <Compile Include="XMLProcessorEx.cs" />
-    <Compile Include="Serialization\XMLCustomConverterAttribute.cs" />
-    <Compile Include="Serialization\XMLDoNotSerializeAttribute.cs" />
     <Compile Include="XMLImporterEx.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Serialization\XMLSerializerEx.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\XMLExtendedSerialization\XMLExtendedSerialization.csproj">
+      <Project>{95FAC04B-5A7A-4869-AEBC-CE5033FE3813}</Project>
+      <Name>XMLExtendedSerialization</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.ContentPipelineExtensions.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
