--- a/FarseerTools/FarseerTools.csproj
+++ b/FarseerTools/FarseerTools.csproj
@@ -10,7 +10,8 @@
     <RootNamespace>FarseerTools</RootNamespace>
     <AssemblyName>FarseerTools</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
     <XnaProfile>Reach</XnaProfile>
@@ -49,6 +50,9 @@
     <Reference Include="Microsoft.Xna.Framework.GamerServices, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="mscorlib" />
     <Reference Include="System" />
+    <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
@@ -59,6 +63,11 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ComponentModel\ListCollectionEditor\ListCollectionEditor.cs" />
+    <Compile Include="ComponentModel\ListCollectionEditor\ListEditorForm.cs" />
+    <Compile Include="ComponentModel\ListCollectionEditor\ListEditorForm.designer.cs">
+      <DependentUpon>ListEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DrawingSystem\AssetCreator.cs" />
     <Compile Include="DrawingSystem\LineBatch.cs" />
     <Compile Include="DrawingSystem\Sprite.cs" />
@@ -70,6 +79,11 @@
       <Project>{0A850700-1ABB-4288-A391-6726B90EBEB9}</Project>
       <Name>Farseer Physics XNA</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ComponentModel\ListCollectionEditor\ListEditorForm.resx">
+      <DependentUpon>ListEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
