--- a/LevelEditor/app.config
+++ b/LevelEditor/app.config
@@ -13,14 +13,23 @@
             <setting name="MainFormSize" serializeAs="String">
                 <value>1460, 899</value>
             </setting>
-            <setting name="mainToolBarLocation" serializeAs="String">
+            <setting name="mainToolStripLocation" serializeAs="String">
                 <value>10, 24</value>
             </setting>
-            <setting name="simulationToolBarLocation" serializeAs="String">
+            <setting name="simulationToolStripLocation" serializeAs="String">
                 <value>179, 24</value>
             </setting>
-            <setting name="toolsToolBarLocation" serializeAs="String">
+            <setting name="toolsToolStripLocation" serializeAs="String">
                 <value>121, 24</value>
+            </setting>
+            <setting name="mainToolStripParentName" serializeAs="String">
+                <value>TopToolStripPanel</value>
+            </setting>
+            <setting name="simulationToolStripParentName" serializeAs="String">
+                <value>TopToolStripPanel</value>
+            </setting>
+            <setting name="toolsToolStripParentName" serializeAs="String">
+                <value>TopToolStripPanel</value>
             </setting>
         </LevelEditor.Properties.Settings>
     </userSettings>
