Исправил сохранение и загрузку настроек, добавил сохранение WindowState для MainForm.

--- a/LevelEditor/app.config
+++ b/LevelEditor/app.config
@@ -5,7 +5,8 @@
         <section name="LevelEditor.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
 </configSections>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup><userSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup>
+    <userSettings>
         <LevelEditor.Properties.Settings>
             <setting name="MainFormLocation" serializeAs="String">
                 <value>0, 0</value>
@@ -30,6 +31,9 @@
             </setting>
             <setting name="toolsToolStripParentName" serializeAs="String">
                 <value>TopToolStripPanel</value>
+            </setting>
+            <setting name="MainFormWindowState" serializeAs="String">
+                <value>Normal</value>
             </setting>
         </LevelEditor.Properties.Settings>
     </userSettings>
