--- a/LevelEditor/Properties/Settings.settings
+++ b/LevelEditor/Properties/Settings.settings
@@ -26,5 +26,8 @@
     <Setting Name="toolsToolStripParentName" Type="System.String" Scope="User">
       <Value Profile="(Default)">TopToolStripPanel</Value>
     </Setting>
+    <Setting Name="MainFormWindowState" Type="System.Windows.Forms.FormWindowState" Scope="User">
+      <Value Profile="(Default)">Normal</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
