XML-сериализация теперь умеет работать с массивами, списками, generic-типами.

--- a/XMLExtendedSerialization/XMLExtendedSerialization.csproj
+++ b/XMLExtendedSerialization/XMLExtendedSerialization.csproj
@@ -43,12 +43,15 @@
   <ItemGroup>
     <Compile Include="DefaultConverters.cs" />
     <Compile Include="Deserializer.cs" />
-    <Compile Include="FieldInfoExtensions.cs" />
+    <Compile Include="FieldInfoXMLExtensions.cs" />
+    <Compile Include="IXMLCustomSerializer.cs" />
     <Compile Include="IXMLValueConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializer.cs" />
-    <Compile Include="TypeExtensions.cs" />
+    <Compile Include="StringXMLExtensions.cs" />
+    <Compile Include="TypeXMLExtensions.cs" />
     <Compile Include="XMLCustomConverterAttribute.cs" />
+    <Compile Include="XMLCustomSerializerAttribute.cs" />
     <Compile Include="XMLDoNotSerializeAttribute.cs" />
     <Compile Include="XMLSerializerEx.cs" />
   </ItemGroup>
